--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+server.port=8085
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=Kom3inator$
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
+
+
