--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto = update
 
